--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script src="js/script.js" type="text/javascript"></script>
     <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDoYutzuGfF5GpS-8z7s3ER7opTZHewAlA&v=3&callback=viewModel.initMap">
+        src="qhttps://maps.googleapis.com/maps/api/js?key=AIzaSyDoYutzuGfF5GpS-8z7s3ER7opTZHewAlA&v=3&callback=viewModel.initMap" onerror="viewModel.mapError()"> 
     </script>
 
 </body>
